--- a/css/alert.css
+++ b/css/alert.css
@@ -7,3 +7,13 @@
   border-radius: 0.25rem;
   display: none;
 }
+
+@-webkit-keyframes onAutoFillStart {from{}}
+@-webkit-keyframes onAutoFillCancel {from{}}
+input:-webkit-autofill {
+    animation-name: onAutoFillStart;
+    transition: background-color 50000s ease-in-out 0s;
+}
+input:not(:-webkit-autofill) {
+    animation-name: onAutoFillCancel;
+}
